added frontend ui

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://abhishekdaszy:9437barun@crudblogs.sdiq09h.mongodb.net/
+MONGO_URI=mongodb+srv://abhishekdaszy:9437barun@crudblogs.sdiq09h.mongodb.net/crudblogs
 JWT_SECRET_KEY=nextjscrudblogs
