--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "jodit-react": "^1.3.39",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "supports-color": "^9.4.0"
   }
 }
