added home page

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://abhishekdaszy:9437barun@crudblogs.sdiq09h.mongodb.net/crudblogs
+MONGO_URI=mongodb+srv://abhishekdaszy:9437barun@theblogverse.pn7bzgs.mongodb.net/theblogverse
 JWT_SECRET_KEY=nextjscrudblogs
